# pap_assignment3

./: .gitignore  CMakeLists.txt  README.MD  a.out  assert.sh  build.sh  matrix_original.txt  matrix_parallel.txt  sequential_matrix.txt  sequential_version.cpp  serial.cpp  serial.out
src/: consts.hpp  includes.hpp  main.cpp  parallel.cl  parallel_version.cpp  parallel_version.hpp  sequential_version.cpp  sequential_version.hpp  utils.hpp
